# Fund-Link

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: README  env.py
alembic/versions/: 20260216_0001_initial_schema.py  20260216_0002_add_frames_query_columns.py  20260216_0003_add_prices_source_currency.py
apps/: __init__.py
apps/api/: __init__.py  main.py
apps/api/db/: __init__.py  config.py  models.py  session.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/web/src/: App.tsx  Graph.tsx  api.ts  styles.css  types.ts
apps/worker/scripts/: __init__.py  build_features.py  fetch_yfinance.py  run_granger.py  seed_sample.py
infra/db/: .env.example  docker-compose.yml
infra/db/scripts/: wait_db.sh
