[project]
name = "fund-link"
version = "0.1.0"
description = "Market Structure Time Machine"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy>=2.0",
  "asyncpg",
  "alembic",
  "pydantic",
  "python-dotenv",
  "pandas",
  "yfinance",
  "numpy",
  "statsmodels",
  "networkx",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# 配布対象を packages/core 配下のみに限定
package-dir = {"" = "packages/core"}

[tool.setuptools.packages.find]
where = ["packages/core"]
include = ["fund_link*"]
exclude = ["tests*"]
